--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Interfaces1ªev">
         <activity
-            android:name=".activity_menus"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".Splash"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,6 +18,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activitymenus"
+            android:exported="true"
+            android:parentActivityName=".MainActivity"
+            />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+        />
     </application>
 
 </manifest>
